[package]
name = "jia_pipe_viewer"
version = "0.1.3"
authors = ["jia_ayo"]
edition = "2021"
description = "This was made for cruise but you can give it a shot"
homepage = "https://github.com/jia-ayo/rust_DSA/tree/master/rust_systems/jia_pipe_viewer"
repository = "https://github.com/jia-ayo/rust_DSA/tree/master/rust_systems/jia_pipe_viewer"
readme = "README.md"
keywords = ["fun", "cruise", "omo", "first-time"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
crossbeam = "0.7.3"
crossterm = "0.14.2"