[package]
name = "blobfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde= "1.0.104"
serde_derive="1.0.104"
bincode = "1.2.1"
failure="0.1.6"
failure_derive="0.1.6"
rand="0.7.3"
hashmap={path="../../v5/hashmap"}
